Fixed sidescroll issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -679,8 +679,8 @@ nav ul li a i {
 }
 
 .review-card {
-  height: 24rem;
-  width: 24rem;
+  height: 21rem;
+  width: 21rem;
   border-radius: 50%;
   margin: 0 auto;
   position: relative;
@@ -752,7 +752,7 @@ nav ul li a i {
 .green-leaf {
   position: absolute;
   bottom: -2em;
-  right: 1em;
+  right: .5em;
 }
 
 @media only screen and (min-width: 62em) {
